Implement rusty upload download

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 resolver = "2"
 members = [
     "crates/model",
+    "crates/storage",
     "crates/python",
     "crates/wasm",
 ]
@@ -16,3 +17,5 @@ repository = "https://github.com/aws-deadline/rusty-attachments"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "1.0"
+async-trait = "0.1"
+rusty-attachments-model = { path = "crates/model" }
