--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,5 +20,6 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "1.0"
 async-trait = "0.1"
+tempfile = "3.0"
 rusty-attachments-common = { path = "crates/common" }
 rusty-attachments-model = { path = "crates/model" }
