--- a/crates/storage/Cargo.toml
+++ b/crates/storage/Cargo.toml
@@ -11,6 +11,9 @@ serde.workspace = true
 serde_json.workspace = true
 thiserror.workspace = true
 async-trait.workspace = true
+rusqlite = { version = "0.32", features = ["bundled"] }
+log = "0.4"
 
 [dev-dependencies]
 tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
+tempfile.workspace = true
