--- a/crates/storage/Cargo.toml
+++ b/crates/storage/Cargo.toml
@@ -6,11 +6,14 @@ license.workspace = true
 description = "Storage abstraction for Job Attachments S3 operations"
 
 [dependencies]
+rusty-attachments-common.workspace = true
 rusty-attachments-model.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 thiserror.workspace = true
 async-trait.workspace = true
+chrono = { version = "0.4", features = ["serde"] }
+uuid = { version = "1.0", features = ["v4"] }
 rusqlite = { version = "0.32", features = ["bundled"] }
 log = "0.4"
 
