--- a/crates/storage/Cargo.toml
+++ b/crates/storage/Cargo.toml
@@ -18,6 +18,7 @@ rusqlite = { version = "0.32", features = ["bundled"] }
 regex = "1.10"
 log = "0.4"
 futures = "0.3"
+filetime = "0.2"
 
 [dev-dependencies]
 tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
