Implement CRT backed client and update docs.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ members = [
     "crates/model",
     "crates/profiles",
     "crates/storage",
+    "crates/storage-crt",
     "crates/python",
     "crates/wasm",
 ]
